[package]
name = "rusted"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = false
strip = "symbols"
panic = "abort"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
md5 = "0.7.0"
substring = "1.4.5"
rand = "0.8.5"
dict = "0.1.5"
libc = "0.2.139"
debugoff = { version = "0.2.1", features = ["obfuscate"] }